--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
     <string name="app_name">Evaluation of Diagnostic Tests</string>
     <string name="evaluate">Evaluate</string>
+    <string name="more_apps">More Apps by this Developer</string>
 
     <string name="add_data">Add data</string>
     <string name="condition_present">Condition\nPresent</string>
